[package]
name = "playwith"
version = "0.1.0"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2021"
description = "Emulate Nintendo Switch controllers over Bluetooth."
readme = "README.md"
repository = "https://github.com/zhxie/playwith"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = "0.13.2"
chrono = "0.4.19"
clap = "2.33.1"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.26"
tokio = "1.16.1"
